# fss

./: .clang-format  .gitignore  .gitmodules  .prettierrc.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  aes128__feistel_8cuh.html  aes128__feistel_8cuh.js  aes128__mmo_8cuh.html  aes128__mmo_8cuh.js  aes128__mmo_8cuh_source.html  aes128__mmo__raw_8cuh.html  aes128__mmo__raw_8cuh.js  aes128__mmo__raw_8cuh_source.html  aes128__mmo__soft_8cuh.html  aes128__mmo__soft_8cuh.js  aes128__mmo__soft_8cuh_source.html  aes__ni_8h_source.html  annotated.html  annotated_dup.js  bench.zsh  bench_all.zsh  blake3_8cuh.html  blake3_8cuh.js  blake3_8cuh_source.html  bytes_8cuh.html  bytes_8cuh.js  bytes_8cuh_source.html  chacha_8cuh.html  chacha_8cuh.js  chacha_8cuh_source.html  classCwMacBytesTest-members.html  classCwMacBytesTest.html  classCwMacBytesTest__inherit__graph.map  (+267 more)
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: bench.yaml  ci.yaml
benches/: dcf.rs  dcf_batch_eval.rs  dcf_eval.rs  dcf_eval_batch.rs  dcf_full_eval.rs  dcf_gen.rs  dcf_large_lambda.rs  dpf.rs  dpf_batch_eval.rs  dpf_eval.rs  dpf_eval_batch.rs  dpf_full_eval.rs  dpf_gen.rs  dpf_large_lambda.rs
cmake/: cuda.cmake  samples.cmake  sodium.cmake  test.cmake
dcf/: Cargo.toml
dcf/benches/: dcf.rs  dcf_batch_eval.rs  dcf_eval.rs  dcf_large_lambda.rs
dcf/src/: group.rs  lib.rs  prg.rs  utils.rs
deploy/: deploy_bench.sh  userdata.txt  wait_file_exists.sh
doc/: bench_aes128_soft.md  bench_third_parties.md  doxygen_math_filter.py  half_tree_dpf_spec_correction.md  macro.tex  orca-shm-aes-bank-conflict.md  orca-shm-aes-bank-conflict.patch
doc/superpowers/specs/: 2026-03-19-vdmpf-design.md
dpf-fss/: Cargo.toml
dpf-fss/benches/: dpf.rs  dpf_batch_eval.rs  dpf_eval.rs  dpf_large_lambda.rs
dpf-fss/src/: lib.rs  prg.rs
fss-types/: Cargo.toml
fss-types/src/: lib.rs
fss_crypto/: __init__.py  _int.py  _jit.py  _validate.py  dcf.py  dpf.py
fss_crypto/_csrc/: binding_common.cuh  dcf_binding_impl.cuh  dpf_binding_impl.cuh
group/: Cargo.toml
group-math/: Cargo.toml
group-math/src/: byte.rs  int.rs  int_prime.rs  lib.rs
group/src/: byte.rs  int.rs  lib.rs
include/: cw_mac_bytes.h  dcf.h  dpf.h  dpf_api.h  fss_decl.h  fss_prelude.h
include/fss/: cuckoo_hash.cuh  cw_mac_bytes.h  dcf.cuh  dcf.h  dpf.cuh  dpf.h  grotto_dcf.cuh  group.cuh  group.h  half_tree_dpf.cuh  hash.cuh  prelude.h  prg.cuh  prg.h  prp.cuh  util.cuh  vdmpf.cuh  vdpf.cuh
include/fss/group/: bytes.cuh  uint.cuh
include/fss/hash/: blake3.cuh  sha256.cuh
include/fss/prg/: aes128_mmo.cuh  aes128_mmo_raw.cuh  aes128_mmo_soft.cuh  aes128_soft.cuh  chacha.cuh
include/fss/prp/: aes128_feistel.cuh
samples/: CMakeLists.txt  dcf_bench.cu  dcf_bytes.c  dcf_full_domain_bytes.c  dpf_bench.cu  dpf_bytes.c  dpf_dcf_cpu.cu  dpf_dcf_gpu.cu  dpf_full_domain_bytes.c  dpf_full_domain_u128_le.c  dpf_i128.c  dpf_i128.cu  dpf_u128_le.c  dpf_u128_le.cu
samples/group/: i128.c  i128.cu
samples/prg/: aes_mmo.c  aes_mmo_ni.c  salsa20.cu
samples/prg/aes-brute-force/: aes_ni.h
samples/prg/torchcsprng/: aes.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  concepts_1.js  concepts_2.js  defines_0.js  enums_0.js  enumvalues_0.js  (+25 more)
src/: bench_cpu.cu  bench_gpu.cu  cache.rs  cw_mac_bytes.c  cw_mac_bytes_test.cc  dcf.c  dcf.rs  dcf_test.cc  dcf_test.cu  dpf.c  dpf.cu  dpf.rs  dpf_test.cc  dpf_test.cu  grotto_dcf_test.cu  group_test.cu  half_tree_dpf_test.cu  lib.rs  owcf.rs  prg.rs  utils.h  utils.rs  vdmpf_test.cu  vdpf_test.cu
src/dcf/: mod.rs  prg.rs
src/dpf/: mod.rs  prg.rs
src/group/: byte.rs  bytes.c  bytes.cu  i128.c  int.rs  int_prime.rs  mod.rs  u128_le.c
src/prg/: aes128_mmo.c  aes128_mmo_ni.c  aes128_mmo_openssl.c  aes256_hirose.c  aes_mmo.c  aes_mmo_ni.c  chacha.cu  mod.rs  salsa.cu  salsa20.cu
src/prg/aes-brute-force/: aes_ni.h
test/: conftest.py  test_dcf_integration.py  test_dpf_integration.py  test_validation.py
