[workspace]
resolver = "2"
members = ["dcf", "dpf-fss", "group-math", "fss-types"]

[workspace.package]
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
documentation = "https://github.com/myl7/fss#readme"
homepage = "https://github.com/myl7/fss"
repository = "https://github.com/myl7/fss.git"
license = "Apache-2.0"
