bench = [
  { name = "dcf", harness = false },
  { name = "dcf_batch_eval", harness = false },
  { name = "dcf_large_lambda", harness = false },
  { name = "dpf", harness = false },
  { name = "dpf_batch_eval", harness = false },
  { name = "dpf_large_lambda", harness = false },
]

[package]
name = "fss-rs"
version = "0.4.1"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = "Function secret sharing including distributed comparison & point functions"
license = "Apache-2.0"
homepage = "https://github.com/myl7/fss"
documentation = "https://docs.rs/fss-rs"
repository = "https://github.com/myl7/fss.git"
keywords = ["crypto", "fss", "dcf", "dpf"]
categories = ["cryptography"]

[features]
default = ["full"]
full = ["prg", "multi-thread"]
prg = ["aes"]
multi-thread = ["rayon"]
group-int-be = []

[dependencies]
bitvec = "1.0.1"
aes = { version = "0.8.3", optional = true }
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
criterion = "0.5.1"
