[project]
name = "fss-crypto"
version = "0.1.0"
description = "PyTorch bindings for the FSS (Function Secret Sharing) library"
requires-python = ">=3.13"
dependencies = ["torch>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["setuptools>=75.0", "torch>=2.6"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fss_crypto*"]

[tool.setuptools.package-data]
"fss_crypto._csrc" = ["*.cuh"]

[tool.setuptools.data-files]
"include/fss" = ["include/fss/*.cuh"]
"include/fss/group" = ["include/fss/group/*.cuh"]
"include/fss/hash" = ["include/fss/hash/*.cuh"]
"include/fss/prg" = ["include/fss/prg/*.cuh"]
"include/fss/prp" = ["include/fss/prp/*.cuh"]
