[package]
name = "dcf"
version = "0.6.1"
edition.workspace = true
description = "Distributed comparison function implementation"
documentation = "https://docs.rs/dcf"
keywords = ["crypto", "fss", "dcf", "dist-comparison-fn"]
categories = ["cryptography"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "dcf"
harness = false
required-features = ["prg"]

[[bench]]
name = "dcf_batch_eval"
harness = false
required-features = ["prg"]

[[bench]]
name = "dcf_large_lambda"
harness = false
required-features = ["prg"]

[features]
default = ["multithread"]
prg = ["aes"]
multithread = ["rayon"]

[dependencies]
bitvec = "1.0.1"
group-math = { version = "0.2", path = "../group-math", features = ["byte"] }
aes = { version = "0.8.3", optional = true }
rayon = { version = "1.7.0", optional = true }
fss-types = { version = "0.1", path = "../fss-types" }

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
criterion = "0.5.1"
