[package]
name = "fss-types"
version = "0.1.0"
edition.workspace = true
description = "Common types used in the crate fss"
documentation = "https://docs.rs/fss-types"
keywords = ["crypto", "fss"]
categories = ["cryptography"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
group-math = { version = "0.2", path = "../group-math", default-features = false }
