[package]
name = "group-math"
version = "0.2.0"
edition.workspace = true
description = "Group (mathematics) interface and implementations"
documentation.workspace = true
keywords = ["crypto", "group", "math"]
categories = ["cryptography"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
impl = ["byte", "int"]
byte = []
int = []
int-be = []

[dependencies]
