[package]
name = "group-math"
version = "0.2.4"
edition.workspace = true
description = "Group (mathematics) interface and implementations"
documentation = "https://docs.rs/group-math"
keywords = ["crypto", "group", "math"]
categories = ["cryptography"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["impl"]
impl = ["byte", "int", "int-prime"]
byte = []
int = []
int-prime = []
int-be = []
